added middleware, added template context, added signals, added command

--- a/src/main/templates/manage/manage_student.html
+++ b/src/main/templates/manage/manage_student.html
@@ -3,7 +3,7 @@
 {% block page_content %}
 
     <div id="main-content">
-        {% if student_detail %}{{ student_detail }}
+        {% if student_detail %}
             <form method="post" action="">{% csrf_token %}
                 <div>
                     <div class="left-part">
